[package]
name = "kademlia_dht"
version = "0.1.0"
authors = ["f0lg0 <folgonileonardo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
hex = "0.4.3"

serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
crossbeam-channel = "0.5.1"
